--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-MYSQL_DATABASE="railway"
-MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
-MYSQL_ROOT_PASSWORD="gsfRzzFBlSJcJPHmHGdKomWJfBZQTCYF"
-MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
-MYSQLDATABASE="${{MYSQL_DATABASE}}"
-MYSQLHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-MYSQLPASSWORD="${{MYSQL_ROOT_PASSWORD}}"
-MYSQLPORT="3306"
-MYSQLUSER="root"
+MYSQL_DATABASE=railway
+MYSQL_ROOT_PASSWORD=gsfRzzFBlSJcJPHmHGdKomWJfBZQTCYF
+MYSQL_URL=mysql://root:gsfRzzFBlSJcJPHmHGdKomWJfBZQTCYF@tramway.proxy.rlwy.net:15359/railway
+MYSQLDATABASE=railway
+MYSQLHOST=tramway.proxy.rlwy.net
+MYSQLPASSWORD=gsfRzzFBlSJcJPHmHGdKomWJfBZQTCYF
+MYSQLPORT=15359
+MYSQLUSER=root
